--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,31 +11,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('/media/levi/12/Compressed/file1_name.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>source</th>\n",
+       "      <th>original_text</th>\n",
+       "      <th>polarity</th>\n",
+       "      <th>subjectivity</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>favorite_count</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>original_author</th>\n",
+       "      <th>followers_count</th>\n",
+       "      <th>friends_count</th>\n",
+       "      <th>possibly_sensitive</th>\n",
+       "      <th>hashtags</th>\n",
+       "      <th>user_mentions</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sun Aug 07 22:31:20 +0000 2022</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>RT @i_ameztoy: Extra random image (I):\\n\\nLets...</td>\n",
+       "      <td>-1.250000e-01</td>\n",
+       "      <td>0.190625</td>\n",
+       "      <td>en</td>\n",
+       "      <td>15760</td>\n",
+       "      <td>2</td>\n",
+       "      <td>i_ameztoy</td>\n",
+       "      <td>20497</td>\n",
+       "      <td>2621</td>\n",
+       "      <td>False</td>\n",
+       "      <td>City</td>\n",
+       "      <td>[{'screen_name': 'i_ameztoy', 'name': 'Iban Am...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sun Aug 07 22:31:07 +0000 2022</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>China even cut off communication, they don't a...</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2166</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZelenskyyUa</td>\n",
+       "      <td>85</td>\n",
+       "      <td>392</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>XiJinping</td>\n",
+       "      <td>[{'screen_name': 'ZelenskyyUa', 'name': 'Волод...</td>\n",
+       "      <td>Netherlands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sun Aug 07 22:31:06 +0000 2022</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>Putin to #XiJinping : I told you my friend, Ta...</td>\n",
+       "      <td>1.000000e-01</td>\n",
+       "      <td>0.350000</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2166</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85</td>\n",
+       "      <td>392</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>XiJinping</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Netherlands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sun Aug 07 22:31:04 +0000 2022</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>RT @ChinaUncensored: I’m sorry, I thought Taiw...</td>\n",
+       "      <td>-6.938894e-18</td>\n",
+       "      <td>0.556250</td>\n",
+       "      <td>en</td>\n",
+       "      <td>17247</td>\n",
+       "      <td>381</td>\n",
+       "      <td>ChinaUncensored</td>\n",
+       "      <td>910</td>\n",
+       "      <td>2608</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[{'screen_name': 'ChinaUncensored', 'name': 'C...</td>\n",
+       "      <td>Ayent, Schweiz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sun Aug 07 22:31:02 +0000 2022</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>RT @benedictrogers: We must not let this happe...</td>\n",
+       "      <td>2.000000e-01</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>en</td>\n",
+       "      <td>41770</td>\n",
+       "      <td>36</td>\n",
+       "      <td>benedictrogers</td>\n",
+       "      <td>207</td>\n",
+       "      <td>54</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>[{'screen_name': 'benedictrogers', 'name': 'Be...</td>\n",
+       "      <td>Melbourne, Victoria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'RT @benedictrogers: We must not let this happen.\\n\\nWe must be ready.\\n\\nWe must defend #Taiwan\\n\\nhttps://t.co/z4Rv925jhI'"
+       "                       created_at  \\\n",
+       "0  Sun Aug 07 22:31:20 +0000 2022   \n",
+       "1  Sun Aug 07 22:31:07 +0000 2022   \n",
+       "2  Sun Aug 07 22:31:06 +0000 2022   \n",
+       "3  Sun Aug 07 22:31:04 +0000 2022   \n",
+       "4  Sun Aug 07 22:31:02 +0000 2022   \n",
+       "\n",
+       "                                              source  \\\n",
+       "0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "1  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "2  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "3  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "4  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "\n",
+       "                                       original_text      polarity  \\\n",
+       "0  RT @i_ameztoy: Extra random image (I):\\n\\nLets... -1.250000e-01   \n",
+       "1  China even cut off communication, they don't a...  0.000000e+00   \n",
+       "2  Putin to #XiJinping : I told you my friend, Ta...  1.000000e-01   \n",
+       "3  RT @ChinaUncensored: I’m sorry, I thought Taiw... -6.938894e-18   \n",
+       "4  RT @benedictrogers: We must not let this happe...  2.000000e-01   \n",
+       "\n",
+       "   subjectivity lang  favorite_count  retweet_count  original_author  \\\n",
+       "0      0.190625   en           15760              2        i_ameztoy   \n",
+       "1      0.000000   en            2166              0      ZelenskyyUa   \n",
+       "2      0.350000   en            2166              0              NaN   \n",
+       "3      0.556250   en           17247            381  ChinaUncensored   \n",
+       "4      0.500000   en           41770             36   benedictrogers   \n",
+       "\n",
+       "   followers_count  friends_count possibly_sensitive   hashtags  \\\n",
+       "0            20497           2621              False       City   \n",
+       "1               85            392                NaN  XiJinping   \n",
+       "2               85            392                NaN  XiJinping   \n",
+       "3              910           2608              False        NaN   \n",
+       "4              207             54              False     Taiwan   \n",
+       "\n",
+       "                                       user_mentions                place  \n",
+       "0  [{'screen_name': 'i_ameztoy', 'name': 'Iban Am...                  NaN  \n",
+       "1  [{'screen_name': 'ZelenskyyUa', 'name': 'Волод...          Netherlands  \n",
+       "2                                                 []          Netherlands  \n",
+       "3  [{'screen_name': 'ChinaUncensored', 'name': 'C...       Ayent, Schweiz  \n",
+       "4  [{'screen_name': 'benedictrogers', 'name': 'Be...  Melbourne, Victoria  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.original_text[4]\n"
+    "df = pd.read_csv('/media/levi/12/Compressed/file1_name.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i_ameztoy,ZelenskyyUa,nan,ChinaUncensored,benedictrogers,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    #print((df.subjectivity[i]), end=”,“)\n",
+    "    print(df.original_author[i],end=\",\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,1,2,3,4,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "   print(i,end=\",\")"
    ]
   }
  ],
