fix the bug on the function test_find_friends_count

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -203,21 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i_ameztoy,ZelenskyyUa,nan,ChinaUncensored,benedictrogers,"
+      "20497,85,85,910,207,"
      ]
     }
    ],
    "source": [
     "for i in range(5):\n",
     "    #print((df.subjectivity[i]), end=”,“)\n",
-    "    print(df.original_author[i],end=\",\")\n"
+    "    print(df.friends_count[i],end=\",\")\n"
    ]
   },
   {
